--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,5 +1,16 @@
-theme = light:GruvboxLightHard,dark:GruvboxDarkHard
-window-inherit-font-size = false
+auto-update-channel = tip
 
-keybind = global:ctrl+space=toggle_quick_terminal
+# Fonts
+font-family = Monaspace Neon
+font-size = 14
+font-feature = ss01,ss02,ss03,ss04,ss07,ss08
+bold-is-bright = true
+
+# Colors
+theme = light:catppuccin-latte,dark:catppuccin-mocha
+window-colorspace = display-p3
+
+# Rest of boolshit
+focus-follows-mouse = true
+keybind = global:cmd+;=toggle_quick_terminal
 command = /opt/homebrew/bin/nu
