--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -1,5 +1,4 @@
 theme = "catppuccin_mocha"
-# Theme must be the first line in the config for the switcher to work
 
 [editor]
 line-number = "relative"
@@ -13,15 +12,15 @@ insert = "bar"
 normal = "block"
 select = "underline"
 
-[keys.insert]
-j = { k = "normal_mode" }
+[keys.insert.j]
+k = "normal_mode"
 
 [keys.normal]
-# Code runners
-C-r = { j = ":sh javac Main.java -Xlint:unchecked; java Main", r = ":sh cargo run" }
-
-# Window manipulation
 C-h = "jump_view_left"
 C-l = "jump_view_right"
 C-j = "jump_view_down"
 C-k = "jump_view_up"
+
+[keys.normal.C-r]
+j = ":sh javac Main.java -Xlint:unchecked; java Main"
+r = ":sh cargo run"
